--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "proxy": "https://asia-southeast2-sejutacita-app.cloudfunctions.net/",
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.2",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
